--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: python
 python:
   - "2.7"
   - "3.5"
+# command to install dependencies
+install:
+
 # command to run tests
 script: pytest tests/
