--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
 install: pip install -r requirements.txt
 # command to run tests
 script:
-  - flake8 
+  - flake8 *.py lib/*.py
   - py.test tests/
